<resources>
    <string name="app_name">DressMe</string>
    <string name="conjuntos_tab_label">Conjuntos</string>
    <string name="prendas_tab_label">Prendas</string>
    <string name="planifiacion_tab_label">Planificar</string>
    <string name="conjunto_sugerido_tab_label">Generador</string>
    <string name="parte_conjunto1">Superior Ligera</string>
    <string name="parte_conjunto2">Superior Abrigo</string>
    <string name="parte_conjunto3">Inferior</string>
    <string name="parte_conjunto4">Calzado</string>
    <string name="color_label">Color: </string>
    <string name="marca_label">Marca: </string>
    <string name="material_label">Material: </string>
    <string name="usos_label">Usos: </string>
    <string name="climas_label">Climas: </string>
    <string name="usos">Usos</string>
    <string name="climas">Climas</string>
    <string name="no_foto_error">La fotografía de la prenda es obligatoria</string>
    <string name="delete_prenda_confirm">¿Seguro que quieres eliminar la prenda?</string>
    <string name="delete_prenda_confirm_title">Eliminar prenda</string>
    <string name="delete_conjunto_confirm">¿Seguro que quieres eliminar el conjunto?</string>
    <string name="delete_conjunto_confirm_title">Desasignar conjunto</string>
    <string name="unassign_conjunto_confirm">¿Seguro que quieres desasignar el conjunto para el %1$s?</string>
    <string name="unassign_conjunto_confirm_title">Desasignar conjunto</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="error_location_connection">No se ha podido conectar con el servicio de localización</string>
    <string name="error_location_permission">No se tienen permisos para obtener la localizacion</string>
    <string name="error_weather">No se ha podido obtener la información meteorológica</string>
    <string name="error_ciudad">No se ha podido obtener la localidad</string>
    <string name="weather_progress">Generando conjunto...</string>
    <string name="usos_spinner_default">Todos los usos</string>
    <string name="no_prenda">Ninguna prenda</string>
    <string name="no_prenda_error">Debe asignarse al menos una prenda</string>
    <string name="conjunto_guardado">Conjunto guardado correctamente</string>
    <string name="todos">Todos</string>
    <string name="mostrar_sugerir">Mostrar generador de conjuntos</string>
    <string name="no_weather">Tiempo no disponible</string>
    <string name="no_permission_critical_error">La aplicación no puede ejecutarse sin los permisos necesarios y se cerrará</string>

    <!-- colores -->
    <string name="negro">Negro</string>
    <string name="gris">Gris</string>
    <string name="blanco">Blanco</string>
    <string name="marron">Marrón</string>
    <string name="beige">Beige</string>
    <string name="rojo">Rojo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="rosa">Rosa</string>

    <!-- claves para los bundle -->
    <string name="prenda_bundle_key">prenda</string>
    <string name="conjunto_bundle_key">conjunto</string>
    <string name="tipo_parte_conjunto_bundle_key">tipoParteConjunto</string>
    <string name="dia_bundle_key">dia</string>

    <!-- claves para las preferencias -->
    <string name="preferences_file">dresapp_prefs</string>
    <string name="show_gen_pref">show_gen_key</string>
</resources>
