<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_conjunto_prenda_par"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/conjunto_card_margin_v"
        android:layout_marginLeft="@dimen/conjunto_card_margin_h"
        android:layout_marginRight="@dimen/conjunto_card_margin_h"
        android:layout_marginTop="@dimen/conjunto_card_margin_v"
        android:orientation="vertical"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/card_padding"
            android:id="@+id/prenda_chose_layout">

            <ImageView
                android:id="@+id/conjunto_prenda_image"
                android:layout_width="@dimen/prenda_select_list_foto_size"
                android:layout_height="@dimen/prenda_select_list_foto_size"
                android:layout_margin="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/card_padding"
                android:paddingStart="@dimen/card_padding">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="horizontal"
                    android:padding="0dp">


                    <ImageView
                        android:id="@+id/conjunto_prenda_color_square"
                        android:layout_width="@dimen/color_square_size"
                        android:layout_height="@dimen/color_square_size"
                        android:background="#000"
                        android:layout_marginRight="@dimen/label_separation"
                        android:layout_marginEnd="@dimen/label_separation"/>

                    <TextView
                        android:id="@+id/conjunto_prenda_color_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <TextView
                        android:id="@+id/conjunto_prenda_climas_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/climas_label"
                        android:layout_marginRight="@dimen/label_separation"
                        android:layout_marginEnd="@dimen/label_separation"/>

                    <TextView
                        android:id="@+id/conjunto_prenda_climas_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:orientation="horizontal"
                    android:padding="0dp">

                    <TextView
                        android:id="@+id/conjunto_prenda_usos_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usos_label"
                        android:layout_marginRight="@dimen/label_separation"
                        android:layout_marginEnd="@dimen/label_separation"/>

                    <TextView
                        android:id="@+id/conjunto_prenda_usos_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_prenda_text"
            android:visibility="gone"
            android:layout_gravity="center"
            android:text="@string/no_prenda"
            android:padding="@dimen/list_item_minimum_size"
             />

    </android.support.v7.widget.CardView>
</LinearLayout>